# gnome-steam-icon-watcher

./: Cargo.toml  LICENSE  README.md  cliff.toml  installer.sh
.github/workflows/: ci.yml
src/: appinfo_vdf.rs  desktop.rs  main.rs  monitor.rs  steam.rs
