[package]
name = "linux-steam-icon-watcher"
version = "1.1.2"
edition = "2024"
authors = ["Zikeji <me@zikeji.com>"]
repository = "https://github.com/zikeji/linux-steam-icon-watcher"
license = "MIT"
description = "A simple program to watch for Steam game icons and download them if they are missing."

[dependencies]
procfs = "0.16"
log = "0.4"
env_logger = "0.11"
regex = "1.11.1"
byteorder = "1.5.0"
reqwest = { version = "0.12.15", features = ["blocking"] }
image = "0.25.6"

[profile.release]
strip = true
lto = true